fileupload to cloudinary commit

--- a/src/pages/Form/Form.css
+++ b/src/pages/Form/Form.css
@@ -1,4 +1,4 @@
-.inp-1{
+/* .inp-1{
     width: 100%;
     background-color: rgba(128, 128, 128, 0.178);
     height: 50px;
@@ -88,4 +88,4 @@
     .d-inp{
       width: 100% !important;
     }
-  }
+  } */
